[gd_scene load_steps=2 format=3 uid="uid://inventory_slot"]

[ext_resource type="Script" path="res://scenes/ui/inventory/inventory_slot.gd" id="1_slot"]

[node name="InventorySlot" type="PanelContainer"]
custom_minimum_size = Vector2(72, 72)
script = ExtResource("1_slot")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="IconRect" type="TextureRect" parent="MarginContainer/VBox"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="IconLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="MarginContainer/VBox"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Highlight" type="ColorRect" parent="."]
layout_mode = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="QuantityLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -20.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
horizontal_alignment = 2
vertical_alignment = 2

[node name="RarityStrip" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 3.0
grow_horizontal = 2
mouse_filter = 2
color = Color(0.4, 0.4, 0.45, 1)

[node name="SlotTypeLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_right = 40.0
offset_bottom = 14.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.55, 1)
theme_override_font_sizes/font_size = 9
horizontal_alignment = 1
uppercase = true


